crates/cli/tests/snapshots/test__init_help_snapshot.snap
---
source: crates/cli/tests/test.rs
assertion_line: 357
expression: output
---
Create a new wasm component in an existing directory

Usage: wasm init [OPTIONS] [PATH]

Arguments:
  [PATH]
          The directory in which to create the wasm package files.
          
          Defaults to the current directory.
          
          [default: .]

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode.
          
          Disables all network operations. Commands that require network access will fail with an error. Local-only commands will continue to work.
