crates/cli/tests/snapshots/test__install_help_snapshot.snap
---
source: crates/cli/tests/test.rs
expression: output
---
Install a dependency from an OCI registry

Usage: wasm install [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>
          The OCI reference to install (e.g., ghcr.io/webassembly/wasi-logging:1.0.0)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode.
          
          Disables all network operations. Commands that require network access will fail with an error. Local-only commands will continue to work.
